--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+sonar.projectKey=user-management
+sonar.host.url=http://localhost:9000
+sonar.login=squ_85c5da2c93c805a443d150860015363a36a52a8f
